# katsuyou

./: Cargo.toml  LICENSE  README.md
src/: cli.rs  constant.rs  lib.rs  main.rs  printer.rs  searcher.rs  word_entity.rs
tests/: tests.rs
