[package]
name = "katsuyou"
version = "0.0.1"
authors = ["Karuna Murti <karuna.murti@gmail.com>"]
edition = "2018"
description = """
`katsuyou` is a command line to show all conjugation form of a Japanese verb or adjective.
"""
repository = "https://gitlab.com/karuna/katsuyou"
readme = "README.md"
license = "MIT"

[[bin]]
path = "src/main.rs"
name = "katsuyou"

[[test]]
name = "integration"
path = "tests/tests.rs"

[dependencies]
clap = "2.32.0"
human-panic = "1.0.1"
console = "0.7.2"

[dev-dependencies]
lazy_static = "1.2.0"
